// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrimaryButton /> matches disabled snapshot 1`] = `
<DocumentFragment>
  <button
    class="css-17rmonj-PrimaryButton"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`<PrimaryButton /> matches snapshot 1`] = `
<DocumentFragment>
  <button
    class="css-zrjck4-PrimaryButton"
  >
    Label
  </button>
</DocumentFragment>
`;
